--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@ respeta la historia y revaloriza su legado urbano en el corazón de la Ciudad de
 
     <div class="carousel-track-container">
       <div class="carousel-track">
-        <div class="slide"><img src="images/Depa1.jpeg" alt="Apartamento 1"></div>
-        <div class="slide"><img src="images/Depa2.jpeg" alt="Apartamento 2"></div>
-        <div class="slide"><img src="images/Depa3.jpeg" alt="Apartamento 3"></div>
-        <div class="slide"><img src="images/Depa4.jpeg" alt="Apartamento 4"></div>
-        <div class="slide"><img src="images/Depa5.jpeg" alt="Apartamento 5"></div>
+        <div class="slide"><img src="images/Depa1.png" alt="Apartamento 1"></div>
+        <div class="slide"><img src="images/Depa2.png" alt="Apartamento 2"></div>
+        <div class="slide"><img src="images/Depa3.png" alt="Apartamento 3"></div>
+        <div class="slide"><img src="images/Depa4.png" alt="Apartamento 4"></div>
+        <div class="slide"><img src="images/Depa5.png" alt="Apartamento 5"></div>
 
       </div>
     </div>
